// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and darwin 1`] = `
Object {
  "baudRate": 115200,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v2/connectivity_1.2.2_115k2_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "1.2.2",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and linux 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v2/connectivity_1.2.2_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "1.2.2",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf51 and win32 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v2/connectivity_1.2.2_1m_with_s130_2.0.1.hex",
  "sdBleApiVersion": 2,
  "version": "1.2.2",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and darwin 1`] = `
Object {
  "baudRate": 115200,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_115k2_with_s132_3.0.hex",
  "sdBleApiVersion": 3,
  "version": "1.2.2",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and linux 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
  "sdBleApiVersion": 3,
  "version": "1.2.2",
}
`;

exports[`FirmwareRegistry.getJlinkConnectivityFirmware returns expected jlink firmware info for nrf52 and win32 1`] = `
Object {
  "baudRate": 1000000,
  "file": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
  "sdBleApiVersion": 3,
  "version": "1.2.2",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for darwin 1`] = `
Object {
  "baudRate": 115200,
  "files": Object {
    "application": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
    "softdevice": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
  },
  "sdBleApiVersion": 3,
  "version": "connectivity 1.2.2+dfuMar-27-2018-12-41-04",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for linux 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
    "softdevice": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
  },
  "sdBleApiVersion": 3,
  "version": "connectivity 1.2.2+dfuMar-27-2018-12-41-04",
}
`;

exports[`FirmwareRegistry.getNordicUSBConnectivityFirmware returns expected nordicUsb firmware info for win32 1`] = `
Object {
  "baudRate": 1000000,
  "files": Object {
    "application": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
    "softdevice": "<PROJECT_ROOT>/pc-ble-driver/hex/sd_api_v3/connectivity_1.2.2_1m_with_s132_3.0.hex",
  },
  "sdBleApiVersion": 3,
  "version": "connectivity 1.2.2+dfuMar-27-2018-12-41-04",
}
`;
